[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[dependency-groups]
dev = [
    "debugpy>=1.8.2",
    "pytest>=9.0.2",
]

[project]
authors = [
    {name = "Cujoko", email = "cujoko@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]
description = "Utility for randomizing songs"
keywords = ["song", "music", "mp3"]
name = "randomize-songs"
requires-python = ">=3.10"
version = "0.1.0"

[project.scripts]
randomize-songs = "randomize_songs.__main__:run"

[project.urls]
repository = "https://github.com/Cujoko/randomize-songs"

[tool.pdm.build]
package-dir = "../src"

[tool.pdm.scripts]
test = "pytest"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["../src"]
testpaths = ["../tests"]
